Delete site-project folder with files

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>HEBDOMAS GRAPHIC TECH</h1>
+        <h1>HEBDOMAS GRAPHIC TECHS</h1>
 
         <nav>
             <a class="links" href="#home">HOME</a>
